[package]
name = "rsa"
version = "0.1.0"
authors = ["cyprx <cyprx@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.28"
base64 = "0.13.0"
string-builder = "0.2.0"

[[bin]]
name = "rsa"
path = "main.rs"
